# ds-project1

./: .gitignore  CMakeLists.txt  README.md  ds_project1.cpp  main.cpp
include/: clinic.h  doctor.h  emergency.h  medicine.h  queue.h  user.h  utils.h
src/: clinic.cpp  doctor.cpp  emergency.cpp  medicine.cpp  queue.cpp  user.cpp  utils.cpp
